# SimpleHDR

./: .gitignore  .gitignore~  CMakeLists.txt  PROJECT-NOTES.md  README.md  README.txt  cmake_uninstall.cmake  hdr list.txt  image.cpp  image.h  project-notes.txt
CMakeModules/: FindEXIF.cmake  FindEXIV2.cmake  FindOpenCV2.cmake
SimpleHDR/: main.cpp
config/: camera.response  config.ini  hdr-video.sh  response_plotting_script.plt
examples/: CMakeLists.txt
examples/SimpleHDR/: CMakeLists.txt  main.cpp  response_plotting_script.plt
examples/testApp/: README.txt  main.cpp
pangolin/: CMakeLists.txt  PangolinConfig.cmake  video.cpp
pangolin/video/: firewire.cpp  firewire.h  image.cpp  image.h
testApp/: CMakeLists.txt  exif.cpp  main.cpp
